// Vitest Snapshot v1

exports[`Test seriesLineFormatter function > Ok Snapshot of tightening results basic configuration data 1`] = `
{
  "color": "#4DD07D",
  "data": [
    [
      0,
      1,
    ],
    [
      1,
      1,
    ],
    [
      2,
      3,
    ],
  ],
  "index": 1,
  "name": "测试数据",
  "showSymbol": false,
  "smooth": true,
  "type": "line",
}
`;

exports[`Test seriesLineFormatter function > Ok Snapshot of tightening results basic configuration data 1 1`] = `
{
  "areaStyle": {
    "color": LinearGradient {
      "colorStops": [
        {
          "color": "#4DD07D",
          "offset": 0,
        },
        {
          "color": "#fff",
          "offset": 1,
        },
      ],
      "global": false,
      "type": "linear",
      "x": 0,
      "x2": 0,
      "y": 0,
      "y2": 1,
    },
  },
  "color": "#4DD07D",
  "data": [
    [
      0,
      1,
    ],
    [
      1,
      1,
    ],
    [
      2,
      3,
    ],
  ],
  "index": 1,
  "name": "测试数据",
  "showSymbol": false,
  "smooth": true,
  "type": "line",
}
`;

exports[`Test seriesLineFormatter function > Ok Snapshot of tightening results basic configuration data 2 1`] = `
{
  "areaStyle": {
    "color": LinearGradient {
      "colorStops": [
        {
          "color": "#4DD07D",
          "offset": 0,
        },
        {
          "color": "#fff",
          "offset": 1,
        },
      ],
      "global": false,
      "type": "linear",
      "x": 0,
      "x2": 0,
      "y": 0,
      "y2": 1,
    },
  },
  "color": "#4DD07D",
  "data": [
    [
      0,
      1,
    ],
    [
      1,
      1,
    ],
    [
      2,
      3,
    ],
  ],
  "index": 1,
  "markLine": {
    "animation": false,
    "data": [
      {
        "label": {
          "fontSize": 12,
          "formatter": "最大 {c}",
          "position": "insideEndTop",
        },
        "lineStyle": {
          "color": "#CC8925",
          "type": "solid",
          "width": 1,
        },
        "name": "max",
        "xAxis": 10,
      },
      {
        "label": {
          "fontSize": 12,
          "formatter": "目标 {c}",
          "position": "insideEndTop",
        },
        "lineStyle": {
          "color": "#CC8925",
          "type": "dashed",
          "width": 2,
        },
        "name": "target",
        "xAxis": 8,
      },
      {
        "label": {
          "fontSize": 12,
          "formatter": "最小 {c}",
          "position": "insideEndTop",
        },
        "lineStyle": {
          "color": "#CC8925",
          "type": "solid",
          "width": 1,
        },
        "name": "min",
        "xAxis": 6,
      },
      {
        "label": {
          "fontSize": 12,
          "formatter": "最大 {c}",
          "position": "insideEndTop",
        },
        "lineStyle": {
          "color": "#CC8925",
          "type": "solid",
          "width": 1,
        },
        "name": "max",
        "yAxis": 10,
      },
      {
        "label": {
          "fontSize": 12,
          "formatter": "目标 {c}",
          "position": "insideEndTop",
        },
        "lineStyle": {
          "color": "#CC8925",
          "type": "dashed",
          "width": 2,
        },
        "name": "target",
        "yAxis": 8,
      },
      {
        "label": {
          "fontSize": 12,
          "formatter": "最小 {c}",
          "position": "insideEndTop",
        },
        "lineStyle": {
          "color": "#CC8925",
          "type": "solid",
          "width": 1,
        },
        "name": "min",
        "yAxis": 6,
      },
    ],
    "label": {
      "show": true,
    },
    "silent": true,
    "symbol": "none",
  },
  "name": "测试数据",
  "showSymbol": false,
  "smooth": true,
  "type": "line",
}
`;

exports[`Test seriesLineFormatter function > Ok Snapshot of tightening results basic configuration data 3 1`] = `
{
  "areaStyle": {
    "color": LinearGradient {
      "colorStops": [
        {
          "color": "#4DD07D",
          "offset": 0,
        },
        {
          "color": "#fff",
          "offset": 1,
        },
      ],
      "global": false,
      "type": "linear",
      "x": 0,
      "x2": 0,
      "y": 0,
      "y2": 1,
    },
  },
  "color": "#4DD07D",
  "data": [
    [
      0,
      1,
    ],
    [
      1,
      1,
    ],
    [
      2,
      3,
    ],
  ],
  "index": 1,
  "markLine": {
    "animation": false,
    "data": [
      {
        "label": {
          "fontSize": 12,
          "formatter": "最大 {c}",
          "position": "insideEndTop",
        },
        "lineStyle": {
          "color": "#CC8925",
          "type": "solid",
          "width": 1,
        },
        "name": "max",
        "xAxis": 10,
      },
      {
        "label": {
          "fontSize": 12,
          "formatter": "目标 {c}",
          "position": "insideEndTop",
        },
        "lineStyle": {
          "color": "#CC8925",
          "type": "dashed",
          "width": 2,
        },
        "name": "target",
        "xAxis": 8,
      },
      {
        "label": {
          "fontSize": 12,
          "formatter": "最小 {c}",
          "position": "insideEndTop",
        },
        "lineStyle": {
          "color": "#CC8925",
          "type": "solid",
          "width": 1,
        },
        "name": "min",
        "xAxis": 6,
      },
      {
        "label": {
          "fontSize": 12,
          "formatter": "最大 {c}",
          "position": "insideEndTop",
        },
        "lineStyle": {
          "color": "#CC8925",
          "type": "solid",
          "width": 1,
        },
        "name": "max",
        "yAxis": 10,
      },
      {
        "label": {
          "fontSize": 12,
          "formatter": "目标 {c}",
          "position": "insideEndTop",
        },
        "lineStyle": {
          "color": "#CC8925",
          "type": "dashed",
          "width": 2,
        },
        "name": "target",
        "yAxis": 8,
      },
      {
        "label": {
          "fontSize": 12,
          "formatter": "最小 {c}",
          "position": "insideEndTop",
        },
        "lineStyle": {
          "color": "#CC8925",
          "type": "solid",
          "width": 1,
        },
        "name": "min",
        "yAxis": 6,
      },
    ],
    "label": {
      "show": true,
    },
    "silent": true,
    "symbol": "none",
  },
  "markPoint": {
    "data": [
      {
        "clamp_angle": 3,
        "clamp_torque": 2,
        "xAxis": 2,
        "yAxis": 3,
      },
    ],
    "itemStyle": {
      "color": "#fff",
      "shadowBlur": 2,
      "shadowColor": "rgba(0, 0, 0, 0.5)",
    },
    "label": {
      "fontSize": 14,
      "formatter": [Function],
      "offset": [
        0,
        5,
      ],
      "position": "insideTop",
      "rich": {
        "label": {
          "fontSize": 14,
          "fontWeight": "bold",
          "height": 20,
        },
      },
      "show": true,
    },
    "symbol": "path://M14,0 L132,0 C139.731986,-1.42034288e-15 146,6.2680135 146,14 L146,63 C146,70.7319865 139.731986,77 132,77 L77,77 L77,77 L73,85 L69,77 L14,77 C6.2680135,77 9.46895252e-16,70.7319865 0,63 L0,14 C-9.46895252e-16,6.2680135 6.2680135,1.42034288e-15 14,0 Z",
    "symbolKeepAspect": true,
    "symbolOffset": [
      0,
      "-30%",
    ],
    "symbolSize": 190,
  },
  "name": "测试数据",
  "showSymbol": false,
  "smooth": true,
  "type": "line",
}
`;

exports[`Test tooltipFormatter function > Return value snapshot when a parameter is passed in 1`] = `
"
           <div style=\\"display: flex; align-items: center; width: 100%\\">
             <div style=\\"background: #5470c6; height: 10px; width: 10px; border-radius: 50%\\"></div>
             <div style=\\"font-weight: 700\\">参考曲线</div>
           </div>
            扭矩: 800 NM
      <br />角度: 12 Deg<br />
           <div style=\\"display: flex; align-items: center; width: 100%\\">
             <div style=\\"background: #5470c6; height: 10px; width: 10px; border-radius: 50%\\"></div>
             <div style=\\"font-weight: 700\\">参考曲线</div>
           </div>
            扭矩: 802 NM
      <br />角度: 12 Deg<br />"
`;

exports[`Test tooltipFormatter function > Return value snapshot when three parameters are passed in 1`] = `
"
           <div style=\\"display: flex; align-items: center; width: 100%\\">
             <div style=\\"background: #5470c6; height: 10px; width: 10px; border-radius: 50%\\"></div>
             <div style=\\"font-weight: 700\\">参考曲线</div>
           </div>
            扭矩: 800 NM
      <br />角度: 12 Deg<br />最大扭矩: 12<br />
           <div style=\\"display: flex; align-items: center; width: 100%\\">
             <div style=\\"background: #5470c6; height: 10px; width: 10px; border-radius: 50%\\"></div>
             <div style=\\"font-weight: 700\\">参考曲线</div>
           </div>
            扭矩: 802 NM
      <br />角度: 12 Deg<br /><br /><div style=\\"color: #f6d544\\">均值: 801</div>
                  <div style=\\"color: #f6d544\\">标准差: 1</div><br />"
`;

exports[`Test tooltipFormatter function > Return value snapshot when two parameters are passed in 1`] = `
"
           <div style=\\"display: flex; align-items: center; width: 100%\\">
             <div style=\\"background: #5470c6; height: 10px; width: 10px; border-radius: 50%\\"></div>
             <div style=\\"font-weight: 700\\">参考曲线</div>
           </div>
            扭矩: 800 NM
      <br />角度: 12 Deg<br />最大扭矩: 12<br />
           <div style=\\"display: flex; align-items: center; width: 100%\\">
             <div style=\\"background: #5470c6; height: 10px; width: 10px; border-radius: 50%\\"></div>
             <div style=\\"font-weight: 700\\">参考曲线</div>
           </div>
            扭矩: 802 NM
      <br />角度: 12 Deg<br />"
`;
